Add signup functionality with form validation and user feedback

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                     </div>
                     <button type="submit" class="btn btn-primary" style="width: 100%;">Login</button>
                 </form>
+                <div class="mt-2 text-center">
+                    <a href="signup.html">Don't have an account? Sign Up</a>
+                </div>
                 <div id="loginMessage" class="mt-2 text-center" style="color: var(--danger); display: none;"></div>
             </div>
         </div>
